--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
         <commons.vfs2.version>2.1.1660580.2</commons.vfs2.version>
         <commons.vfs2.s3.version>2.3.3</commons.vfs2.s3.version>
         <commons.jcs.version>2.0-beta-1</commons.jcs.version>
-        <drools.version>6.3.0.Final</drools.version>
+        <drools.version>6.4.0.Beta1</drools.version>
         <ehcache.jcache.version>1.0.1</ehcache.jcache.version>
         <extjs.webjars.version>5.1.1-light</extjs.webjars.version>
         <geotools.version>14.0</geotools.version>
