--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
         <commons.vfs2.version>2.1.1660580.2</commons.vfs2.version>
         <commons.vfs2.s3.version>2.3.3</commons.vfs2.s3.version>
         <commons.jcs.version>2.0-beta-1</commons.jcs.version>
-        <drools.version>6.4.0.Beta1</drools.version>
+        <drools.version>6.3.0.Final</drools.version>
         <ehcache.jcache.version>1.0.1</ehcache.jcache.version>
         <extjs.webjars.version>5.1.1-light</extjs.webjars.version>
         <geotools.version>14.0</geotools.version>
@@ -387,6 +387,13 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.drools</groupId>
+                <artifactId>drools-bom</artifactId>
+                <type>pom</type>
+                <version>${drools.version}</version>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.javamoney</groupId>
                 <artifactId>moneta</artifactId>
                 <version>${javamoney.version}</version>
@@ -454,13 +461,6 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency-->
-            <dependency>
-                <groupId>org.drools</groupId>
-                <artifactId>drools-bom</artifactId>
-                <type>pom</type>
-                <version>${drools.version}</version>
-                <scope>import</scope>
-            </dependency>
             <dependency>
                 <groupId>net.sf.ehcache</groupId>
                 <artifactId>ehcache-core</artifactId>
