--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,7 @@
         <commons.vfs2.s3.version>2.3.3</commons.vfs2.s3.version>
         <commons.jcs.version>2.0-beta-1</commons.jcs.version>
         <compile-testing.version>0.8</compile-testing.version>
+        <docker.maven.plugin.version>0.4.0</docker.maven.plugin.version>
         <drools.version>6.3.0.Final</drools.version>
         <ehcache.jcache.version>1.0.1</ehcache.jcache.version>
         <extjs.webjars.version>5.1.1-light</extjs.webjars.version>
@@ -233,7 +234,6 @@
         <redis.embedded.version>0.6</redis.embedded.version>
         <selenium.version>2.47.0</selenium.version>
         <!-- spring-io platform uses this property for selenium version -->
-
         <smartsprites.version>0.2.11</smartsprites.version>
         <slick.webjars.version>1.5.0</slick.webjars.version>
         <sockjsclient.webjars.version>1.0.3</sockjsclient.webjars.version>
@@ -1477,7 +1477,7 @@
 			         <fixFieldComment>false</fixFieldComment>
 			         <defaultAuthor>Petar Tahchiev</defaultAuthor>
 			         <defaultSince>0.6</defaultSince>
-			         <excludes>**/*Impl.java,**/Default**.java,**/**Config.java</excludes>
+			         <excludes>**/*Impl.java,**/Default**.java,**/**Config.java,**/**Data.java</excludes>
 			    </configuration>
 			</plugin>
 			<plugin>
