--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@
         <drools.version>6.3.0.Final</drools.version>
         <ehcache.jcache.version>1.0.1</ehcache.jcache.version>
         <extjs.webjars.version>5.1.1-light</extjs.webjars.version>
-        <geotools.version>14.0</geotools.version>
+        <geotools.version>15-beta</geotools.version>
         <google.concurrentlinkedhashmap.version>1.4.2</google.concurrentlinkedhashmap.version>
         <google.geocoder.version>0.16</google.geocoder.version>
         <gridgain.version>6.6.8</gridgain.version>
