--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,7 @@
         <asciidoctorj.diagram.version>1.3.1</asciidoctorj.diagram.version>
         <atmosphere.version>2.2.6</atmosphere.version>
         <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength</checkstyle.violation.ignore>
-        <codemodel.version>2.6</codemodel.version>
+        <codemodel.version>2.8.3</codemodel.version>
         <codemirror.webjars.version>5.1</codemirror.webjars.version>
         <commons.collections4.version>4.1</commons.collections4.version>
         <commons.vfs2.version>2.1.1660580.2</commons.vfs2.version>
@@ -393,6 +393,11 @@
                 <type>pom</type>
                 <version>${drools.version}</version>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.helger</groupId>
+                <artifactId>jcodemodel</artifactId>
+                <version>${codemodel.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.javamoney</groupId>
