--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,7 @@
         <wuic.version>0.5.2.RC1</wuic.version>
         <xml.apis.version>1.4.01</xml.apis.version> <!-- xml-apis has latest version of 1.4.01 - do not UPDATE -->
         <xalan.version>2.7.2</xalan.version>
+        <yubico.version>3.0.1</yubico.version>
         <zxing.version>3.2.1</zxing.version>
         <w3c-nu-validator.version>15.6.29</w3c-nu-validator.version>
     </properties>
@@ -868,6 +869,11 @@
                 <artifactId>compile-testing</artifactId>
                 <version>${compile-testing.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.yubico</groupId>
+                <artifactId>yubico-validation-client2</artifactId>
+                <version>${yubico.version}</version>
+            </dependency>
 			<!-- Nemesis -->
             <dependency>
                 <groupId>com.nemesis.platform</groupId>
@@ -1047,6 +1053,11 @@
             <dependency>
                 <groupId>com.nemesis.platform.module.fraud</groupId>
                 <artifactId>nemesis-module-signifyd</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nemesis.platform.module.security</groupId>
+                <artifactId>nemesis-module-yubico</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
             <dependency>
